convert resume policies and auto resume